ProFIT/objects/Error_Log__c.object
<CustomObject>
    <fields>
        <fullName>Log_Date_Time__c</fullName>
        <description>Stores the Date&amp;Time details when the Error occured</description>
        <inlineHelpText>Stores the Date&amp;Time details when the Error occured</inlineHelpText>
        <label>Log Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Log_Details__c</fullName>
        <description>Stores the Complete Stack Track about the Error</description>
        <inlineHelpText>Stores the Complete Stack Track about the Error</inlineHelpText>
        <label>Log Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Process_Name__c</fullName>
        <description>States the name of either apex class or apex trigger</description>
        <inlineHelpText>States the name of either apex class or apex trigger</inlineHelpText>
        <label>Process Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <label>Error Log</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ER-{0000}</displayFormat>
        <label>Log#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>